# multi-agent-hyperlocal-catalog-ops

./: BLOG.md  Dockerfile  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
data/: oversight_sft.jsonl
scripts/: eval_compare.py  generate_sft_data.py  plot_results.py
server/: __init__.py  app.py  environment.py
tests/: test_environment.py
train/: train_sft.py
